--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,14 @@ starlette>=0.27.0
 python-dateutil>=2.8.2
 typing-extensions>=4.8.0
 
+# 邮件服务
+jinja2>=3.1.2
+aiosmtplib>=2.0.2
+
+# 缓存和实时通信
+# redis>=5.0.1  # 暂时不使用Redis，仅使用内存缓存
+websockets>=12.0
+
 # 生产部署
 gunicorn>=21.2.0
 
